tests/files/type_checker_tests/should_pass/058.cmdr
//Test that not operations type check
x = 1;
y = ![1, 2, 3][x];
