tests/files/type_checker_tests/should_fail/005.cmdr
//Should fail trying to index with something that is not an integer
x = [1, 2, 3];
y = x["hi"];